--- a/app/src/main/res/layout/rw_item_multicamp.xml
+++ b/app/src/main/res/layout/rw_item_multicamp.xml
@@ -67,6 +67,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:typeface="sans"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -75,18 +76,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.1"
-            tools:text="Ugurcan Dede" />
+            tools:text="Ugurcan Dede"
+            tools:textColor="#000" />
 
         <TextView
             android:id="@+id/tv_dept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:fontFamily="@font/poppins"
+            android:textColor="@color/white"
+            android:typeface="normal"
             app:layout_constraintEnd_toEndOf="@+id/tv_leader"
             app:layout_constraintHorizontal_bias="0.428"
             app:layout_constraintStart_toStartOf="@+id/tv_leader"
             app:layout_constraintTop_toBottomOf="@+id/tv_leader"
-            tools:text="Uludağ University" />
+            tools:text="Uludağ University"
+            tools:textColor="#000" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -104,16 +110,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
-            android:layout_marginBottom="1dp"
+            android:fontFamily="@font/poppins"
             android:text="@string/more_info"
+            android:textColor="@color/white"
             android:textSize="10sp"
+            android:typeface="normal"
             app:layout_constraintBottom_toBottomOf="@+id/iv_arrow"
             app:layout_constraintEnd_toStartOf="@+id/iv_arrow"
-            app:layout_constraintTop_toTopOf="@+id/iv_arrow" />
+            app:layout_constraintTop_toTopOf="@+id/iv_arrow"
+            tools:textColor="#000" />
 
         <ImageView
             android:id="@+id/iv_arrow"
-            android:layout_width="10dp"
+            android:layout_width="12dp"
             android:layout_height="0dp"
             android:rotationY="180"
             app:layout_constraintBottom_toBottomOf="parent"
