--- a/app/src/main/res/drawable/bg_top_prettycurve.xml
+++ b/app/src/main/res/drawable/bg_top_prettycurve.xml
@@ -5,9 +5,8 @@
     android:viewportWidth="512"
     android:viewportHeight="512">
     <group>
-        <clip-path android:pathData="M0,0h512v512h-512z M 0,0"/>
-        <path
-            android:pathData="M-70.0,115.0a371.5,330.0,0,1,0,743.0,0.0a371.5,330.0,0,1,0,-743.0,0.0z">
+        <clip-path android:pathData="M0,0h512v512h-512z M 0,0" />
+        <path android:pathData="M-70.0,115.0a371.5,330.0,0,1,0,743.0,0.0a371.5,330.0,0,1,0,-743.0,0.0z">
             <aapt:attr name="android:fillColor">
                 <gradient
                     android:startY="169"
@@ -15,8 +14,12 @@
                     android:endY="-2705"
                     android:endX="3084"
                     android:type="linear">
-                    <item android:offset="0" android:color="#663399"/>
-                    <item android:offset="1" android:color="#FFFFFFFF"/>
+                    <item
+                        android:offset="0"
+                        android:color="#663399" />
+                    <item
+                        android:offset="1"
+                        android:color="#FFFFFFFF" />
                 </gradient>
             </aapt:attr>
         </path>
