--- a/app/src/main/res/layout/fragment_all_multicamps.xml
+++ b/app/src/main/res/layout/fragment_all_multicamps.xml
@@ -84,6 +84,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/bottom_wave" />
 
+        <ProgressBar
+            android:id="@+id/activityInc"
+            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins"
+            android:lineSpacingExtra="8sp"
+            android:text="@string/loading"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="@+id/activityInc"
+            app:layout_constraintStart_toStartOf="@+id/activityInc"
+            app:layout_constraintTop_toBottomOf="@+id/activityInc" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
